--- a/app/views/layouts/dashboard.html.erb
+++ b/app/views/layouts/dashboard.html.erb
@@ -20,20 +20,13 @@
       <div id="headerLeft">
         <ul class="breadcrumb">
           <li>
-            <a href="#">Overview</a>
-          </li>
-          <li>
-            <a href="#">></a>
-          </li>
-          <li>
-            <a href="#">Modules</a>
+            <%= link_to("Dashboard", rails_admin_dashboard_path) %>
           </li>
         </ul>
         <h1>Rails Admin</h1>
       </div>
-      
-      <ul id="nav">
-<%= render(:partial => 'rails_admin/navigation', :locals => {:abstract_models => @abstract_models}) %>      </ul>
+            
+<%= render(:partial => 'rails_admin/navigation', :locals => {:abstract_models => @abstract_models}) %>
             
       <div id="headerRight">
         <ul class="breadcrumb">
