Added the label field as a separate tag. Closes #14

--- a/app/views/rails_admin/_belongs_to_association.html.erb
+++ b/app/views/rails_admin/_belongs_to_association.html.erb
@@ -20,7 +20,8 @@
                 </ul>
                 <% end %>
                 <div>
-                  <%= select("object", child_key, collection, {:include_blank => true, :selected => selected.to_s, :label => label}) %>
+                  <%= label_tag label %>
+                  <%= select("object", child_key, collection, {:include_blank => true, :selected => selected.to_s}) %>
                   <p class="help">
                     <%= required ? "Required." : "Optional." %>
                   </p>
