--- a/app/views/rails_admin/_string.html.erb
+++ b/app/views/rails_admin/_string.html.erb
@@ -5,7 +5,8 @@
   required = !property[:nullable?]
 %>
                 <div>
-                  <%= text_field(property_name, :size => [50, length].min, :maxlength => length, :label => label) %>
+                  <%= label_tag label %>
+                  <%= text_field property_name, :size => [50, length].min, :maxlength => length %>
                   <% if property_name.to_s =~ /(image|logo|photo|photograph|picture|thumb|thumbnail)_ur(i|l)/i %>
                     <img src="<%= @object.send(property_name) %>" width="10" height"10" />
                   <% end %>
