--- a/app/views/rails_admin/_timestamp.html.erb
+++ b/app/views/rails_admin/_timestamp.html.erb
@@ -5,7 +5,8 @@
   required = !property[:nullable?]
 %>
                 <div>
-                  <%= text_field(property_name, :class => "vDateField", :value => value.respond_to?(:strftime) ? value.strftime("%Y-%m-%d %H:%M:%S") : nil, :label => label) %>
+                  <%= label_tag label %>
+                  <%= text_field property_name, :class => "vDateField", :value => value.respond_to?(:strftime) ? value.strftime("%Y-%m-%d %H:%M:%S") : nil %>
                   <p class="help">
                     <%= required ? "Required." : "Optional." %>
                   </p>
