--- a/app/views/rails_admin/_big_decimal.html.erb
+++ b/app/views/rails_admin/_big_decimal.html.erb
@@ -3,9 +3,11 @@
   length = property[:length]
   label = property[:pretty_name]
   required = !property[:nullable?] || property[:serial?]
+  model_name = @abstract_model.to_param
 %>
                 <div>
-                  <%= text_field(property_name, :maxlength => length, :label => label) %>
+                  <%= label_tag label %>
+                  <%= text_field model_name, property_name, :maxlength => length, :label => label %>
                   <p class="help">
                     <%= required ? "Required." : "Optional." %>
                   </p>
