--- a/app/views/rails_admin/_boolean.html.erb
+++ b/app/views/rails_admin/_boolean.html.erb
@@ -1,8 +1,9 @@
 <%
   property_name = property[:name]
   label = property[:pretty_name]
+  model_name = @abstract_model.to_param
 %>
                 <div>
                   <%= label_tag label %>
-                  <%= check_box property_name %>
+                  <%= check_box model_name, property_name %>
                 </div>
