--- a/app/views/rails_admin/_string.html.erb
+++ b/app/views/rails_admin/_string.html.erb
@@ -1,15 +1,17 @@
 <%
   property_name = property[:name]
+  model_name = @abstract_model.to_param
   length = property[:length]
   label = property[:pretty_name]
   required = !property[:nullable?]
 %>
                 <div>
                   <%= label_tag label %>
-                  <%= text_field property_name, :size => [50, length].min, :maxlength => length %>
+                  <%= text_field model_name, property_name, :size => [50, length].min, :maxlength => length %>
+                  <!-->
                   <% if property_name.to_s =~ /(image|logo|photo|photograph|picture|thumb|thumbnail)_ur(i|l)/i %>
                     <img src="<%= @object.send(property_name) %>" width="10" height"10" />
-                  <% end %>
+                  <% end %>-->
                   <p class="help">
                     <%= required ? "Required." : "Optional." %> <%= length %> <%= length == 1 ? "character." : "characters or fewer." %>
                   </p>
