--- a/app/views/layouts/dashboard.html.erb
+++ b/app/views/layouts/dashboard.html.erb
@@ -11,7 +11,10 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta name="robots" content="NONE,NOARCHIVE" />
   <title><%= @page_name %> | <%= @slice_name %></title>
-  <%= stylesheet_link_tag('style') %>
+  <%= stylesheet_link_tag('base') %>
+  <%= stylesheet_link_tag('dashboard') %>
+  
+  
 </head>
 
 <body>
