--- a/app/views/layouts/dashboard.html.erb
+++ b/app/views/layouts/dashboard.html.erb
@@ -1,16 +1,9 @@
-<%
-  # FIXME
-  # slice_name = "RailsAdmin" + (RailsAdmin[:app_name].blank? ? "" : " for #{RailsAdmin[:app_name]}")
-  @slice_name = "RailsAdmin"
-  @page_name = "Site administration"
-%>
-
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta name="robots" content="NONE,NOARCHIVE" />
-  <title><%= @page_name %> | <%= @slice_name %></title>
+  <title><%= @page_name %> | <%= @plugin_name %></title>
   <%= stylesheet_link_tag('base') %>
   <%= stylesheet_link_tag('dashboard') %>
   
