--- a/public/stylesheets/create.css
+++ b/public/stylesheets/create.css
@@ -152,7 +152,7 @@
 }
 
 #saveContainer{
-	background:url(images/save.png) no-repeat;
+	background:url(/images/save.png) no-repeat;
 	width:90px;
 	height:42px;
 	margin-left:-8px;
@@ -173,7 +173,7 @@
 
 
 #saveAddContainer{
-	background:url(images/saveandadd.png);
+	background:url(/images/saveandadd.png);
 	width:180px;
 	height:42px;
 	margin-left:-12px;
@@ -193,7 +193,7 @@
 }
 
 #cancelContainer{
-	background:url(images/cancel.png);
+	background:url(/images/cancel.png);
 	width:82px;
 	height:42px;
 	margin-left:-12px;	
