--- a/app/views/layouts/form.html.erb
+++ b/app/views/layouts/form.html.erb
@@ -1,46 +1,83 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-us" lang="en-us">
-  <head>
-    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    <meta name="robots" content="NONE,NOARCHIVE" />
-    <title><%= @page_name %> | <%= @plugin_name %></title>
-    <!-- FIXME: These should use something like "public_path_for" from merb-slices -->
-    <%= stylesheet_link_tag('base.css') %>
-    <%= stylesheet_link_tag('forms.css') %>
-    <!--[if lte IE 7]><%= stylesheet_link_tag('ie.css') %><![endif]-->
-    <%= javascript_include_tag('i18n.js') %>
-    <%= javascript_include_tag('core.js') %>
-    <%= javascript_include_tag('RelatedObjectLookups.js') %>
-    <%= javascript_include_tag('getElementsBySelector.js') %>
-    <%= javascript_include_tag('actions.js') %>
-    <%= javascript_include_tag('SelectBox.js') %>
-    <%= javascript_include_tag('SelectFilter2.js') %>
-    <%= javascript_include_tag('calendar.js') %>
-    <%= javascript_include_tag('DateTimeShortcuts.js') %>
-  </head>
-  <body class="admin-slice change-form">
-    <div id="container">
-      <div id="header">
-        <div id="branding">
-          <h1 id="site-name">
-            <%= @plugin_name %>
-          </h1>
-        </div>
-      </div>
-      <div class="breadcrumbs">
-        <%= link_to("Home", rails_admin_dashboard_path) %> &rsaquo;
-        <%= link_to(@abstract_model.pretty_name, rails_admin_list_path(:model_name => @abstract_model.to_param)) %> &rsaquo;
-        <%= @page_name %>
-      </div>
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <title><%= @page_name %> | <%= @plugin_name %></title>
+  <%= stylesheet_link_tag('base.css') %>
+  <%= stylesheet_link_tag('create.css') %>
 
-<%= render(:partial => 'layouts/flash', :locals => {:flash => flash}) -%>
-      <div id="content" class="colM">
-        <h1>
-          <%= @page_name %>
-        </h1>
-<%= yield %>
+  <%= javascript_include_tag('prototype.js') %>
+  <%= javascript_include_tag('prototype-base-extensions.js') %>
+  <%= javascript_include_tag('prototype-date-extensions.js') %>
+  <%= javascript_include_tag('getElementsBySelector.js') %>
+  <%= javascript_include_tag('datepicker.js') %>
+  <%= stylesheet_link_tag('datepicker.css') %>
+
+
+<script type="text/javascript" language="javascript">
+document.observe("dom:loaded", function() {
+	$$(".dateField").each(function(elem){
+		new Control.DatePicker(elem, {icon: '/images/calendar.png'});
+	});
+	// .dateField, .timestampField, .timeField, .datetimeField
+	$$(".timestampField").each(function(elem){
+		new Control.DatePicker(elem, {icon: '/images/clock.png',timePicker: true, timePickerAdjacent: true});
+	});
+	$$(".timeField").each(function(elem){
+		new Control.DatePicker(elem, {icon: '/images/clock.png',timePicker: true,datePicker :false});
+	});
+	$$(".datetimeField").each(function(elem){
+		new Control.DatePicker(elem, {icon: '/images/calendar.png',timePicker: true, timePickerAdjacent: true});
+	});
+});
+
+</script>
+
+
+
+<title>Rails Admin Modules</title>
+<link href="base.css" rel="stylesheet" type="text/css" />
+<link href="create.css" rel="stylesheet" type="text/css" />
+</head>
+
+<body>
+  <div id="wraper">
+    <div id="header">
+      <div id="headerLeft">
+        <ul class="breadcrumb">
+          <li>
+            <%= link_to("Dashboard", rails_admin_dashboard_path) %>
+            &rsaquo;
+          </li>
+          <li>
+            <%= link_to(@abstract_model.pretty_name, rails_admin_list_path(:model_name => @abstract_model.to_param)) %>
+            &rsaquo;
+          </li>
+          <li>
+            <%= link_to(@page_name, rails_admin_new_path(:model_name => @abstract_model.to_param)) %>
+          </li>
+        </ul>
+				
+				<h1>Rails Admin</h1>
+			</div>
+            
+<%= render(:partial => 'rails_admin/navigation', :locals => {:abstract_models => @abstract_models}) %>
+			
+			<div id="headerRight">
+			  <ul class="breadcrumb">
+			    <li><a href="#">John Doe</a></li>
+			    <li>|</li>
+			    <li><a href="#">My profile</a></li>
+			    <li>|</li>
+			    <li><a href="#">Log out</a></li>
+			  </ul>
       </div>
-      <div id="footer"></div>
     </div>
-  </body>
+    
+    <div id="content">
+<%= render(:partial => 'layouts/flash', :locals => {:flash => flash}) -%>      
+<%= yield %>      
+    </div>
+  </div>
+</body>
 </html>
