--- a/app/views/rails_admin/_string.html.erb
+++ b/app/views/rails_admin/_string.html.erb
@@ -5,14 +5,9 @@
   label = property[:pretty_name]
   required = !property[:nullable?]
 %>
-                <div>
-                  <%= label_tag label %>
-                  <%= text_field model_name, property_name, :size => [50, length].min, :maxlength => length %>
-                  <!-->
-                  <% if property_name.to_s =~ /(image|logo|photo|photograph|picture|thumb|thumbnail)_ur(i|l)/i %>
-                    <img src="<%= @object.send(property_name) %>" width="10" height"10" />
-                  <% end %>-->
-                  <p class="help">
-                    <%= required ? "Required." : "Optional." %> <%= length %> <%= length == 1 ? "character." : "characters or fewer." %>
-                  </p>
-                </div>
+                <%= label_tag "#{property_name}", label %>
+                
+                <%= text_field model_name, property_name, :size => [50, length].min, :maxlength => length, :class => "stringField #{errors_exist ? "errorField" : nil}" %>
+                <!--><p class="help">
+                  <%= required ? "Required." : "Optional." %> <%= length %> <%= length == 1 ? "character." : "characters or fewer." %>
+                </p>-->
