--- a/app/views/rails_admin/edit.html.erb
+++ b/app/views/rails_admin/edit.html.erb
@@ -1,19 +1,30 @@
-        <div id="content-main">
+      <div id="contentHeader">
+        <h2><%= @page_name %></h2>
+      </div>
+      <div id="contentMainNew">
         <%= form_for(@object, :url => rails_admin_update_path(:model_name => @abstract_model.to_param, :id => @object.id)) do %>
-          <div>
-<%= render(:partial => 'properties', :object => @properties) -%>
+          <fieldset>
+		        <h2>BASIC INFO</h2>
+      			<div class="formSection">
+<%= render(:partial => 'properties', :properties => @properties) -%>
+            </div>
+<!--
 <%= render(:partial => 'belongs_to_association', :collection => @abstract_model.belongs_to_associations) -%>
 <%= render(:partial => 'has_one_association', :collection => @abstract_model.has_one_associations) -%>
 <%= render(:partial => 'has_many_association', :collection => @abstract_model.has_many_associations) -%>
-            <div class="submit-row" >
-              <%= submit_tag "Save", :class => "default", :name => "_save" %>
-              <p class="deletelink-box">
-                <%= link_to("Delete", rails_admin_delete_path(:model_name => @abstract_model.to_param, :id => @object.id), :class => "deletelink") %>
-              </p>
-              <%= submit_tag "Save and add another", :name => "_add_another" %>
-              <%= submit_tag "Save and continue editing", :name => "_continue" %>
-            </div>
+-->
+            <ul id="submitArea">
+        	    <li id="saveContainer">
+        	      <%= submit_tag "Save", :class => "default", :name => "_save", :id => "save_btn" %>
+        	    </li>
+              <li id="saveAddContainer">
+                <%= submit_tag "Save and add another", :name => "_add_another", :id => "saveAdd_btn" %>
+              </li>
+              <li id="cancelContainer">
+                <%= submit_tag "cancel", :name => "_continue", :id => "cancel_btn" %>
+              </li>
+            </ul>
+  		    </fieldset>
           </div>
-        <% end =%>
-
-        </div>
+        <% end %>
+      </div>
