--- a/app/views/rails_admin/list.html.erb
+++ b/app/views/rails_admin/list.html.erb
@@ -18,7 +18,7 @@
       	  </ul>
       	</div>
       </div>
-      
+<%= render(:partial => 'layouts/flash', :locals => {:flash => flash}) -%>      
       <div id="contentMainModules">
         
         <ul id="moduleHeader">
