--- a/app/views/rails_admin/new.html.erb
+++ b/app/views/rails_admin/new.html.erb
@@ -1,6 +1,7 @@
       <div id="contentHeader">
         <h2><%= @page_name %></h2>
       </div>
+<%= render(:partial => 'layouts/flash', :locals => {:flash => flash}) -%>      
       <div id="contentMainNew">
         <%= form_tag(rails_admin_create_path(:model_name => @abstract_model.to_param)) do %>
           <fieldset>
