--- a/app/views/rails_admin/_date.html.erb
+++ b/app/views/rails_admin/_date.html.erb
@@ -7,7 +7,4 @@
 %>
                 <%= label_tag "#{property_name}", label %>
 
-                <%= text_field model_name, property_name,  :maxlength => length, :class => "dateField #{errors_exist ? "errorField" : nil}", :value => object_property(@object,property) %>
-                <!--><p class="help">
-                <%= required ? "Required." : "Optional." %> <%= length %> <%= length == 1 ? "character." : "characters or fewer." %>
-                </p>-->
+                <%= text_field model_name, property_name, :class => "dateField #{errors_exist ? "errorField" : nil}", :value => object_property(@object,property) %>
