--- a/app/views/rails_admin/_string.html.erb
+++ b/app/views/rails_admin/_string.html.erb
@@ -8,7 +8,7 @@
 %>
                 <%= label_tag "#{property_name}", label %>
                 <% object_property(@object,property) %>
-                <%= text_field model_name, property_name, :size => [50, length].min, :maxlength => length, :class => "stringField #{errors_exist ? "errorField" : nil}", :value => object_property(@object,property) %>
+                <%= text_field model_name, property_name, :size => [50, length].min, :maxlength => length, :class => "stringField #{errors_exist ? "errorField" : nil}", :value => @object.send(property_name) %>
                 <!--><p class="help">
                   <%= required ? "Required." : "Optional." %> <%= length %> <%= length == 1 ? "character." : "characters or fewer." %>
                 </p>-->
