--- a/public/stylesheets/create.css
+++ b/public/stylesheets/create.css
@@ -47,7 +47,7 @@
 	margin-left:2px;
 }
 
-.stringField, .intField, .bigDecimalField, .floatField, .dateField, .timestampField, .timeField, .datetimeField{
+.stringField, .intField, .bigDecimalField, .floatField, .dateField, .timestampField, .timeField, .datetimeField, .textField{
 	float:left;
 	font-family:Verdana, Geneva, sans-serif;
 	font-size:12px;
@@ -144,6 +144,8 @@
 }
 
 #submitArea{
+	clear:both;
+	display:block;
 	list-style-type:none;
 }
 
@@ -210,4 +212,7 @@
 	text-indent:-9999px;
 	margin-left:7px;
 	margin-top:9px;
+}
+
+.textField{
 }
