Finished applying list view skin. Closes #21

--- a/app/views/rails_admin/list.html.erb
+++ b/app/views/rails_admin/list.html.erb
@@ -59,9 +59,9 @@
         </ul>
                 
         <div class="searchBox">
-          <form action="#" method="post">
+          <form action="#" action="" method="get">
             <fieldset>
-              <input type="text" id="searchBar" />
+              <input type="text" id="searchBar" name="query" value="<%= query %>"/>
               <input type="submit" id="searchbar_btn" value="SEARCH" />
             </fieldset>
           </form>
